feat: adding CRUD of users
