# src/interfaces/IUserDTO.ts
@@ -1,0 +1,12 @@
+import {Role} from "../types/Role";
+
+
+export interface IUserDTO{
+    name:string;
+    username: string;
+    password: string;
+    email: string;
+    driver_licence: string;
+    role?: Role;
+    created_at?: Date
+}
